# console-wars

./: .dockerignore  AI_BOT.md  CMakeLists.txt  Dockerfile  RAILWAY.md  README.md  fly.toml  kill_server.sh  railway.toml
.cache/clangd/index/: bonus.hpp.EDCBA7E743AA9050.idx  bot_brain.hpp.C882C232E18FF977.idx  bot_observation.cpp.81316D205FC6168E.idx  bot_observation.hpp.1197750AAC53AB7E.idx  bot_player.cpp.8F59A7BC9F1FCCA2.idx  bot_player.hpp.BD9735F2CB4D2647.idx  bot_reward.cpp.5C80118E2F4F9AAC.idx  bot_reward.hpp.BA017D555D74B7C3.idx  dqn_brain.cpp.7686423782375289.idx  dqn_brain.hpp.0CEB031431C56053.idx  game_state.cpp.48C1039028403CF9.idx  game_state.hpp.B515AB347BD44521.idx  hook.cpp.5336F6ED71935BDE.idx  hook.hpp.E71B1BD5FA2C945C.idx  input.cpp.CEC072C86C476F9E.idx  input.hpp.656A67A70BEF5114.idx  main.cpp.3239DF59A89CE475.idx  mine.hpp.E836EA3D2D1DB268.idx  neural_net.cpp.AC6D479AF01007EC.idx  neural_net.hpp.A42E846E57468025.idx  pudge.cpp.339AF4E38BFE1A55.idx  pudge.hpp.8A891234E0715768.idx  renderer.cpp.D8F7D6FE24FC0341.idx  renderer.hpp.2F88262BB854E9A1.idx  replay_buffer.hpp.D85E513B5641C69B.idx  (+6 more)
maps/: default.txt
src/: bonus.hpp  game_state.cpp  game_state.hpp  hook.cpp  hook.hpp  input.cpp  input.hpp  main.cpp  mine.hpp  pudge.cpp  pudge.hpp  renderer.cpp  renderer.hpp  score.hpp  server.cpp  server.hpp  session.cpp  session.hpp  types.hpp
src/bot/: bot_brain.hpp  bot_observation.cpp  bot_observation.hpp  bot_player.cpp  bot_player.hpp  bot_reward.cpp  bot_reward.hpp  dqn_brain.cpp  dqn_brain.hpp  neural_net.cpp  neural_net.hpp  replay_buffer.hpp
